syntax = "proto3";

package rpc;

option go_package = "github.com/livekit/livekit/pkg/service/rpc";

import "options.proto";

service IngressInternal {
  rpc ListActiveIngress(ListActiveIngressRequest) returns (ListActiveIngressResponse) {
    option (psrpc.options).multi = true;
  };
}

service IngressHandler {
  rpc HangUpIngress(HangUpIngressRequest) returns (HangUpIngressResponse) {
    option (psrpc.options).topics = true;
  };
}

message ListActiveIngressRequest {}

message ListActiveIngressResponse {
  repeated string ingress_ids = 1;
}

message HangUpIngressRequest {}

message HangUpIngressResponse {}
